# nettui

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config/: keybinds.toml.example
scripts/: build-release-asset.sh
src/: app.rs  event.rs  handler.rs  keybinds.rs  lib.rs  main.rs  tui.rs
src/backend/: iwd.rs  mod.rs  networkd.rs  traits.rs
src/domain/: common.rs  ethernet.rs  mod.rs  wifi.rs
src/ui/: components.rs  ethernet.rs  layout.rs  mod.rs  wifi.rs
